--- a/styles.css
+++ b/styles.css
@@ -45,25 +45,11 @@ img {
 }
 
 .container {
-  max-width: 320px;
-  padding: 0 16px;
+  width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1158px) {
-  .container {
-    min-width: 1158px;
-    padding: 0 15px;
-  }
-}
-
-/* header */
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -159,7 +145,6 @@ img {
   color: #404bbf;
 }
 
-/* hero section */
 .hero-section {
   margin: 0 auto;
   background-color: #2e2f42;
@@ -211,15 +196,8 @@ img {
   background-color: #404bbf;
 }
 
-/* advantages section */
 .advantages-section {
-  padding: 96px 0;
-}
-
-@media (min-width: 768px) {
-  .advantages-section {
-    padding: 120px 0;
-  }
+  padding: 120px 0;
 }
 
 .visually-hidden {
@@ -237,92 +215,35 @@ img {
 
 .advantages-list {
   display: flex;
-  flex-wrap: wrap;
-  gap: 72px;
-}
-
-@media (min-width: 768px) {
-  .advantages-list {
-    gap: 72px 24px;
-  }
-}
-@media (min-width: 1158px) {
-  .advantages-list {
-    gap: 24px;
-  }
+  gap: 24px;
+  flex-basis: calc((100%-72px) / 4);
 }
 
 .advantage-item {
-  min-width: 288px;
-  flex-basis: 100%;
-}
-
-@media (min-width: 768px) {
-  .advantage-item {
-    min-width: 356px;
-    flex-basis: calc((100% - 24px) / 2);
-  }
-}
-
-@media (min-width: 1158px) {
-  .advantage-item {
-    min-width: 264px;
-    flex-basis: calc((100% - 72px) / 4);
-  }
+  flex-basis: calc((100%-72px) / 4);
 }
 
 .advantage-icon {
-  display: none;
-}
-
-@media (min-width: 1158px) {
-  .advantage-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 264px;
-    height: 112px;
-    background-color: #f4f4fd;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    margin-bottom: 8px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .section-title {
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.11;
+  line-height: 1.11em;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
   margin-bottom: 72px;
-}
-
-.advantages-list-title {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-@media (min-width: 768px) {
-  .advantages-list-title {
-    text-align: left;
-  }
-}
-
-@media (min-width: 1158px) {
-  .advantages-list-title {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-  }
 }
 
 .section-list-title {
@@ -335,66 +256,27 @@ img {
 }
 
 .section-list-text {
+  font-weight: 400;
   line-height: 1.5em;
   letter-spacing: 0.02em;
-  font-weight: 500;
 }
 
-@media (min-width: 1158px) {
-  .section-list-text {
-    font-weight: 400;
-  }
-}
-
-/* team section */
 .team-section {
   background-color: #f4f4fd;
-  padding: 96px 0;
-}
-
-@media (min-width: 1158px) {
-  .team-section {
-    padding: 120px 0;
-  }
+  padding: 120px 0;
 }
 
 .team-list {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 72px;
-}
-
-@media (min-width: 768px) {
-  .team-list {
-    gap: 64px 24px;
-  }
-}
-@media (min-width: 1158px) {
-  .team-list {
-    display: flex;
-    gap: 24px;
-  }
+  gap: 24px;
 }
 
 .team-list-item {
-  flex-basis: 100%;
-  max-width: 264px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-@media (min-width: 768px) {
-  .team-list-item {
-    flex-basis: calc((100% - 24px) / 2);
-  }
-}
-@media (min-width: 1158px) {
-  .team-list-item {
-    flex-basis: calc((100% - 72px) / 4);
-  }
 }
 
 .team-socials {
@@ -436,46 +318,21 @@ img {
   text-align: center;
 }
 
-/* portfolio section */
 .portfolio-section {
-  padding: 96px 0;
-}
-
-@media (min-width: 1158px) {
-  .portfolio-section {
-    padding: 120px 0;
-  }
+  padding: 120px 0;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px;
-}
-@media (min-width: 768px) {
-  .portfolio-list {
-    gap: 72px 24px;
-  }
-}
-@media (min-width: 1158px) {
-  .portfolio-list {
-    gap: 48px 24px;
-  }
+  gap: 24px;
+  flex-basis: calc((100%-48px) / 3);
+  row-gap: 48px;
 }
 
 .portfolio-item {
-  flex-basis: 100%;
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media (min-width: 768px) {
-  .portfolio-item {
-    flex-basis: calc((100% - 24px) / 2);
-  }
-}
-@media (min-width: 1158px) {
-  .portfolio-item {
-    flex-basis: calc((100% - 48px) / 3);
-  }
 }
 
 .portfolio-item:hover {
@@ -514,7 +371,6 @@ img {
   border-right: 1px solid #e7e9fc;
 }
 
-/* footer */
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
@@ -643,7 +499,6 @@ img {
   fill: var(--white-color);
 }
 
-/* modal */
 .backdrop {
   position: fixed;
   top: 0;
@@ -809,7 +664,7 @@ img {
 .modal-checkbox:checked + .privacy-checkbox .custom-checkbox {
   background-color: var(--active-color);
   border: none;
-  fill: #f4f4fd;
+  fill: #F4F4FD;
 }
 
 .privacy-link {
