--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ img {
 
 @media (min-width: 1158px) {
   .container {
-    min-width: 1158px;
+    max-width: 1158px;
     padding: 0 15px;
   }
 }
@@ -125,6 +125,12 @@ img {
 
 @media only screen and (max-width: 767.98px) {
   .mobile-menu {
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
     background-color: transparent;
     position: absolute;
@@ -132,10 +138,11 @@ img {
     right: 16px;
   }
 
-  .menu-icon {
+  .menu-nav-icon {
     fill: #2f2f37;
   }
 }
+
 @media only screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -175,9 +182,19 @@ img {
   color: #404bbf;
 }
 
-.header-address {
-  display: flex;
-  gap: 40px;
+@media only screen and (min-width: 768px) {
+  .header-address {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .header-address {
+    flex-direction: row;
+    gap: 40px;
+  }
 }
 
 .address {
@@ -191,10 +208,19 @@ img {
 }
 
 .address-link {
-  line-height: 1.5em;
-  letter-spacing: 0.02rem;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
   color: #434455;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 1158px) {
+  .address-link {
+    font-size: 16px;
+    line-height: 1.5em;
+    letter-spacing: 0.02rem;
+  }
 }
 
 .address-link:hover,
@@ -473,7 +499,6 @@ img {
 }
 @media (min-width: 1158px) {
   .team-list {
-    display: flex;
     gap: 24px;
   }
 }
@@ -553,11 +578,13 @@ img {
   flex-wrap: wrap;
   gap: 48px;
 }
+
 @media (min-width: 768px) {
   .portfolio-list {
     gap: 72px 24px;
   }
 }
+
 @media (min-width: 1158px) {
   .portfolio-list {
     gap: 48px 24px;
@@ -666,6 +693,7 @@ img {
   margin-bottom: 16px;
   text-align: center;
 }
+
 @media (min-width: 768px) {
   .logo-footer {
     text-align: left;
@@ -683,6 +711,7 @@ img {
   min-width: 288px;
   font-weight: 400;
 }
+
 @media (min-width: 768px) {
   .footer-text-info {
     max-width: 264px;
@@ -698,12 +727,14 @@ img {
   text-align: center;
   margin: 0 auto 16px;
 }
+
 @media (min-width: 768px) {
   .footer-text {
     text-align: left;
     margin: 0 0 16px;
   }
 }
+
 @media (min-width: 1158px) {
   .footer-text {
     width: 264px;
@@ -799,7 +830,7 @@ img {
 
 @media (min-width: 768px) {
   .footer-form-input {
-    width: 264px;
+    max-width: 264px;
   }
 }
 
@@ -837,24 +868,41 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+  .modal {
+    padding: 72px 24px 24px 24px;
+    width: 408px;
+    min-height: 584px;
+  }
 }
 
 .modal-close-button {
@@ -976,17 +1024,19 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--grey-color);
+  display: flex;
+  align-items: center;
 }
 
 .custom-checkbox {
-  width: 16px;
-  height: 16px;
+ min-width: 16px;
+  min-height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   fill: transparent;
@@ -1018,4 +1068,110 @@ img {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* mobile menu */
+.menu-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  padding: 72px 16px 40px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white-color);
+  transform: translateX(100%);
+  transition: trnslateX 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container.is-open {
+  transform: translateX(0%);
+}
+
+.menu-close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mobile-menu-list {
+  margin-bottom: auto;
+}
+
+.mobile-menu-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
+.mobile-menu-contacts {
+  margin-bottom: 48px;
+}
+
+.menu-contacts-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.menu-contacts-link {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  color: #2e2f42;
+}
+
+.current {
+  color: #404bbf;
+}
+
+.menu-socials {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+}
+
+.menu-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.menu-icon {
+  fill: var(--ligth-color);
+}
+
+.menu-icon-bg {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-icon-bg:hover,
+.menu-icon-bg:focus {
+  background-color: #404bbf;
 }
