--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,6 @@ img {
 
 @media only screen and (min-resolution: 192dpi) {
   .hero-section {
-    padding: 112px 0 112px;
     background-image: linear-gradient(
         to bottom,
         rgba(46, 47, 66, 0.7),
@@ -292,7 +291,7 @@ img {
   }
 }
 
-@media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
   .hero-section {
     background-image: linear-gradient(
         to bottom,
@@ -304,14 +303,30 @@ img {
 }
 
 .hero-title {
-  max-width: 496px;
-  font-size: 56px;
+  max-width: 200px;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07em;
-  letter-spacing: 0.02em;
+  line-height: 1.11;
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
   text-align: center;
   color: #ffffff;
-  margin: 0 auto 46px;
+  margin: 0 auto 72px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    margin: 0 auto 36px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    margin: 0 auto 48px;
+  }
 }
 
 .hero-button {
@@ -1029,7 +1044,7 @@ img {
 }
 
 .custom-checkbox {
- min-width: 16px;
+  min-width: 16px;
   min-height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
@@ -1147,7 +1162,6 @@ img {
   gap: 40px;
   justify-content: center;
   align-items: center;
-  margin-top: 8px;
 }
 
 .menu-social-item {
